# M5DOOM

./: .gitignore  README.md  README_EN.md
src/: .gitignore
src/Tab5DOOM/: .gitignore  CMakeLists.txt  Makefile  flashwad.sh  partitions.csv  sdkconfig  sdkconfig.defaults
src/Tab5DOOM/components/esp_lcd_st7121/: idf_component.yml
src/Tab5DOOM/components/esp_lcd_st7121/include/: esp_lcd_st7121.h
src/Tab5DOOM/components/m5stack_tab5/: idf_component.yml  m5stack_tab5.c
src/Tab5DOOM/components/prboom/: CMakeLists.txt
src/Tab5DOOM/components/prboom-esp32-compat/: CMakeLists.txt  Kconfig.projbuild  gamepad.c  i_system.c  i_video.c  idf_component.yml  spi_lcd.c
src/Tab5DOOM/components/prboom-esp32-compat/include/: spi_lcd.h
src/Tab5DOOM/components/prboom-wad-tables/: CMakeLists.txt
src/Tab5DOOM/main/: CMakeLists.txt  app_main.c
